--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "expo export",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "tsc --noEmit && eslint --fix \"**/*.{js,ts,tsx}\" && prettier --write \"**/*.{js,ts,tsx}\"",
-    "test": "jest",
+    "test": "jest --watchAll",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx}\""
   },
   "dependencies": {
@@ -41,15 +41,27 @@
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.0.10",
     "@types/react-native": "^0.73.0",
+    "@types/redux-mock-store": "^1.5.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-no-switch-statements": "^1.0.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.7",
     "prettier": "^3.5.3",
+    "redux-mock-store": "^1.5.5",
     "typescript": "^5.8.3"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "clearMocks": true,
+    "resetMocks": true,
+    "restoreMocks": true
+  }
 }
