--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest-expo": "~53.0.7",
     "prettier": "^3.5.3",
     "redux-mock-store": "^1.5.5",
+    "redux-saga-test-plan": "^4.0.6",
     "typescript": "^5.8.3"
   },
   "private": true,
